# lumiere-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.claude/: CLAUDE.md
.claude/sprints/: OVERVIEW.md  sprint-01-foundation.md  sprint-02-database-schemas.md  sprint-03-authentication.md  sprint-04-user-system.md  sprint-05-server-system.md  sprint-06-channel-system.md  sprint-07-permissions.md  sprint-08-websocket-gateway.md  sprint-09-messaging-core.md  sprint-10-messaging-advanced.md  sprint-11-typing-read-states.md  sprint-12-file-media.md  sprint-13-search.md  sprint-14-voice-video.md  sprint-15-push-notifications.md  sprint-16-data-services.md  sprint-17-rate-limiting-security.md  sprint-18-moderation.md  sprint-19-bot-framework.md  sprint-20-e2e-encryption.md  sprint-21-monitoring.md  sprint-22-performance.md  sprint-23-deployment.md
.claude/sprints/phase2/: OVERVIEW.md  P2-01-integration-testing.md  P2-02-prepared-statements.md  P2-03-rate-limiting.md  P2-04-jetstream-consumers.md  P2-05-push-notifications.md  P2-06-gateway-resume.md  P2-07-media-streaming.md  P2-08-security-hardening.md  P2-09-e2e-testing.md  P2-10-e2e-encryption.md
.github/workflows/: ci.yml
config/: default.toml  development.toml  production.toml  test.toml
crates/lumiere-auth/: Cargo.toml
crates/lumiere-auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs  session.rs
crates/lumiere-data-services/: Cargo.toml
crates/lumiere-data-services/src/: cache.rs  coalescing.rs  error.rs  lib.rs  redis_cache.rs
crates/lumiere-db/: Cargo.toml
crates/lumiere-db/src/: lib.rs
crates/lumiere-gateway/: Cargo.toml
crates/lumiere-gateway/src/: handler.rs  protocol.rs  session.rs
crates/lumiere-media/: Cargo.toml
crates/lumiere-media/src/: error.rs  lib.rs  service.rs  validation.rs
crates/lumiere-models/: Cargo.toml
crates/lumiere-models/src/: bucket.rs  config.rs  error.rs  lib.rs  snowflake.rs
crates/lumiere-nats/: Cargo.toml
crates/lumiere-nats/src/: lib.rs
crates/lumiere-permissions/: Cargo.toml
crates/lumiere-permissions/src/: lib.rs
crates/lumiere-push/: Cargo.toml
crates/lumiere-push/src/: apns.rs  fcm.rs  lib.rs  pg_store.rs
crates/lumiere-search/: Cargo.toml
crates/lumiere-search/src/: lib.rs
crates/lumiere-server/: Cargo.toml
crates/lumiere-server/src/: lib.rs  main.rs
crates/lumiere-server/src/middleware/: mod.rs  rate_limit.rs  sanitize.rs  security.rs
crates/lumiere-server/src/routes/: attachments.rs  auth.rs  channels.rs  devices.rs  messages.rs  mod.rs  moderation.rs  reactions.rs  roles.rs  servers.rs  typing.rs  users.rs  webhooks.rs
crates/lumiere-server/src/workers/: mod.rs  push_worker.rs  read_state_worker.rs  search_indexer.rs
crates/lumiere-server/tests/: auth_user_tests.rs  gateway_tests.rs  messaging_tests.rs  moderation_webhook_tests.rs  server_channel_tests.rs
crates/lumiere-server/tests/common/: mod.rs
crates/lumiere-voice/: Cargo.toml
crates/lumiere-voice/src/: lib.rs
load-tests/: README.md
load-tests/helpers/: auth.js
load-tests/scenarios/: connection_storm.js  message_history.js  message_throughput.js  mixed_workload.js  websocket_connections.js
migrations/postgres/: 20260329000001_initial.sql
migrations/scylla/: 001_initial.cql
