[package]
name = "lumiere-data-services"
version = "0.1.0"
edition = "2021"

[dependencies]
lumiere-models = { workspace = true }
lumiere-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
