[package]
name = "lumiere-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
bitflags = { workspace = true }
validator = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
scylla = { workspace = true }
axum = { workspace = true }
redis = { workspace = true }
