[package]
name = "lumiere-push"
version = "0.1.0"
edition = "2021"

[dependencies]
lumiere-models = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
