[package]
name = "lumiere-search"
version = "0.1.0"
edition = "2021"

[dependencies]
lumiere-models = { workspace = true }
meilisearch-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
