[package]
name = "lumiere-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumiere-server"
path = "src/main.rs"

[dependencies]
lumiere-models = { workspace = true }
lumiere-db = { workspace = true }
lumiere-auth = { workspace = true }
lumiere-permissions = { workspace = true }
lumiere-gateway = { workspace = true }
lumiere-nats = { workspace = true }
lumiere-search = { workspace = true }
lumiere-media = { workspace = true }
lumiere-push = { workspace = true }
lumiere-voice = { workspace = true }
lumiere-data-services = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
scylla = { workspace = true }
redis = { workspace = true }
async-nats = { workspace = true }
config = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
validator = { workspace = true }
nanoid = { workspace = true }
regex-lite = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
